test/subjects/errors/bad_arrays_read5.php
<?php

	f ($a[]); // { phc-error: Cannot use [] for reading }

?>
